Fix column gap on cards container

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: grid;
     grid: auto auto / 1fr 4fr;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .header {
@@ -146,13 +147,14 @@ h1 {
     background-color: lightgrey;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    column-gap: 20px;
 
 }
 
 .projects {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding: 20px;
+    margin-left: 50px;
     gap: 20px;
 }
 
